@@ -27,11 +27,13 @@ private:
     ObjectEntryIndex _sceneryType{};
     uint8_t _primaryColour{};
     uint8_t _secondaryColour{};
+    uint8_t _tertiaryColour{};
 
 public:
     SmallSceneryPlaceAction() = default;
     SmallSceneryPlaceAction(
-        const CoordsXYZD& loc, uint8_t quadrant, ObjectEntryIndex sceneryType, uint8_t primaryColour, uint8_t secondaryColour);
+        const CoordsXYZD& loc, uint8_t quadrant, ObjectEntryIndex sceneryType, uint8_t primaryColour, uint8_t secondaryColour,
+        uint8_t tertiaryColour);
 
     void AcceptParameters(GameActionParameterVisitor& visitor) override;
 
